# text-classifier

./: README.md  pyproject.toml  text-classifier.ipynb
